Configurar favicon, Open Graph y Dockerfile

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <meta name="author" content="FUERTES" />
     <meta name="keywords" content="gimnasio santa rosa de cabal, entrenamiento funcional risaralda, fisioterapia santa rosa, ejercicio adulto mayor, iniciación deportiva niños, gym eje cafetero" />
 
-    <meta property="og:title" content="FUERTES – Centro de Acondicionamiento Físico" />
-    <meta property="og:description" content="Entrenamiento funcional, fisioterapia y programas para todas las edades en Santa Rosa de Cabal, Risaralda." />
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512.png" />
+
+    <meta property="og:title" content="FUERTES - Centro de Acondicionamiento Físico" />
+    <meta property="og:description" content="Entrenamiento seguro, profesional y ajustado a tus capacidades." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://fuertesclub.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="FUERTES – Centro de Acondicionamiento Físico" />
