Actualizar hero y title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FUERTES – Centro de Acondicionamiento Físico en Santa Rosa de Cabal</title>
+    <title>FUERTES - CAFI</title>
     <meta name="description" content="Entrenamiento funcional, fisioterapia y programas para todas las edades. Más de 20 años de experiencia. Clases semi-personalizadas en Santa Rosa de Cabal." />
     <meta name="author" content="FUERTES" />
     <meta name="keywords" content="gimnasio santa rosa de cabal, entrenamiento funcional risaralda, fisioterapia santa rosa, ejercicio adulto mayor, iniciación deportiva niños, gym eje cafetero" />
